--- a/templates/import.html
+++ b/templates/import.html
@@ -10,12 +10,19 @@
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <link href="{{ url_for('static', filename='css/test.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/newjs.js') }}" type="text/javascript"></script>
-</head>
+<style>
+    body{
+        background-image: url("{{url_for('static', filename='leaf.jpg')}}")
+    }
+</style>
+    
+    </head>
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Plant Disease Diagnosis</a>
+            <a class="navbar-brand" href="https://btpplantdisease.herokuapp.com/">Plant Disease Diagnosis</a>
+            <a class="navbar-brand" href="https://soilalto.herokuapp.com/">Soil type classification</a>
 
         </div>
     </nav>
