--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,17 @@
 {% block content %}
 
 <center>
-<br><h2>Plant Disease Diagnosis</h2><br>
-
+<br>
+<h1 style="font-weight: bold; color: white;">Plant Disease Diagnosis</h1>
     <form id="upload-file" method="post" enctype="multipart/form-data">
-         <input type="file" name="file" class="btn btn-success" id="imageUpload" accept=".png, .jpg, .jpeg">
+
+        <br><br>
+        <h1 style="font-weight: bold; color: white;">If desktop: Select a file or drag here</h1>
+      <h1 style="font-weight: bold;color: white;">If mobile: Select a photo or take a photo</h1>
+      <br><br>
+         <input type="file" name="file" class="btn btn-success" id="imageUpload" accept=".png, .jpg, .jpeg" >
     </form>
-
-
-    <div class="image-section" style="display:none;">
+<div class="image-section" style="display:none;">
          <img id="imagePreview"  class="img-responsive" src="#" style="width:300px;height:300px;"/><br><br>
          <div>
             <button type="button" class="btn btn-info btn-lg " id="btn-predict">Predict!</button>
